<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Screens -->
    <string name="app_name">ExerciseLog</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_afragment">AFragment</string>
    <string name="title_activity_bfragment">BFragment</string>
    <string name="title_activity_a">AActivity</string>
    <string name="banner_desc_activity_main">My Banner</string>

    <!-- Log Form -->
    <string name="button_log">Log!</string>
    <string name="exercise_name">Name: </string>
    <string name="exercise_name_hint">Name... </string>
    <string name="exercise_weight">Weight: </string>
    <string name="exercise_weight_hint">Weight... </string>
    <string name="exercise_reps">Reps: </string>
    <string name="exercise_reps_hint">Reps... </string>

    <!-- Log Form -->
    <string name="title_activity_log">LogActivity</string>
    
    <!-- Date picker -->
    <string name="date_current_date">Current Date (M-D-YYYY)</string>
    <string name="date_change_date">Change Date</string>
    
    <!-- Overflow menu options -->
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>

</resources>