<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LogFormFragment" >

    <TextView
        android:id="@+id/tv_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name" />

    <EditText
        android:id="@+id/et_exercise_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_name_hint">
    </EditText>
    
    <TextView
        android:id="@+id/tv_exercise_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_weight" />

    <EditText
        android:id="@+id/et_exercise_weight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_weight_hint"
        android:text="0">
    </EditText>
    
    <TextView
        android:id="@+id/tv_exercise_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_reps" />

    <EditText
        android:id="@+id/et_exercise_reps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_reps_hint"
        android:text="0">
    </EditText>

    <Button
        android:id="@+id/button_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_log" />

</LinearLayout>